# fastAPIAvan-ado

projeto1/: .env.example  converter.py  main.py  pyproject.toml  routers.py  schemas.py
projeto2/: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
projeto2/app/: main.py
projeto2/app/db/: connection.py  models.py
projeto2/app/migrations/: env.py
projeto2/app/migrations/versions/: 7ec0b4bbd90d_add_products_table.py  b46724b00525_add_categories_table.py
projeto2/app/routes/: category_routes.py  deps.py
projeto2/app/schemas/: base.py  category.py  product.py
projeto2/app/test/: conftest.py
projeto2/app/test/routes/: test_category_routes.py  test_product_routes.py
projeto2/app/test/schemas/: test_category_schema.py  test_product_schema.py
projeto2/app/test/use_cases/: test_category_use_cases.py
projeto2/app/use_cases/: category.py
projeto2/var/cache/pgadmin_data/: pgadmin4.db
projeto2/var/cache/pgadmin_data/sessions/: d61be89b-6488-4720-84c0-f7d72b34b465
projeto2/var/cache/postgres_data_test/: postmaster.pid
projeto2/var/cache/postgres_data_test/global/: 1260  1262  2671  pg_control  pg_internal.init
projeto2/var/cache/postgres_data_test/pg_stat/: global.stat
projeto2/var/cache/postgres_data_test/pg_stat_tmp/: db_0.stat  global.stat
projeto2/var/cache/postgresql_data/: postmaster.pid
projeto2/var/cache/postgresql_data/global/: pg_control  pg_internal.init
projeto2/var/cache/postgresql_data/pg_stat/: db_0.stat  db_13442.stat  global.stat
projeto2/var/cache/postgresql_data/pg_stat_tmp/: db_0.stat  (+2 more)
(+6 files in other folders)
