[tool.poetry]
name = "projeto1"
version = "0.1.0"
description = "projeto 1"
authors = ["Danubio de Araujo <danubio.bwm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
