[tool.poetry]
name = "projeto2"
version = "0.1.0"
description = ""
authors = ["Danubio de Araujo <danubio.bwm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"
aiohttp = "^3.9.1"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pytest = "^7.4.3"
alembic = "^1.13.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
